--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -34,7 +34,7 @@
               </ng-container>
             </div>
           </div>
-          <div class="title">{{ "TravelBookmark" | translate }}</div>
+          <div class="title">{{ "EnterThePlanName" | translate }}</div>
         </div>
       </div>
 
@@ -351,7 +351,7 @@
         <!-- <div class='rt'>
           <div class="timerequired">{{ row.timeRequiredDisp  }}</div>
         </div> -->
-        <div class="title">{{ "TravelBookmark" | translate }}</div>
+        <div class="title">{{ "EnterThePlanName" | translate }}</div>
       </mat-card-header>
     </mat-card>
 
