--- a/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
+++ b/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="panel-content">
   <div class="sub">
-    {{ "TravelBookmark" | translate }}
+    {{ "EnterThePlanName" | translate }}
   </div>
   <!-- プラン名 -->
   <mat-form-field appearance="outline">
