--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -48,7 +48,7 @@ form {
   //width:100%;
 
   flex-direction: row;
-  align-items: baseline;
+  align-items: stretch;
 
   justify-content: space-between;
 
@@ -73,12 +73,12 @@ form {
 
   .rt {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     //background: #f8f7f7;
     //border-radius: 20px;
     padding: 0 8px 0 5px;
     //height: 40px;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-end;
     width: 100%;
 
