meta差し替え＆トップ、メニュー変更

--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -91,13 +91,13 @@
         >
         <a
           mat-list-item
-          (click)="onNavgateFeature('area/kamakura/lunch.html')"
-          >{{ "KanakuraLunch" | translate }}</a
+          (click)="onNavgateFeature('area/kamakura/kamakura_guidemap.html')"
+          >{{ "KamakuraJyosiTabi" | translate }}</a
         >
         <a
           mat-list-item
-          (click)="onNavgateFeature('area/HokkaidoSummer.html')"
-          >{{ "SapporoJyosiTabi" | translate }}</a
+          (click)="onNavgateFeature('index.html')"
+          >{{ "AreaSpecial" | translate }}</a
         >
         <!-- <a mat-list-item href="">{{ "ExcitingTripForKids" | translate }}</a>
           <a mat-list-item href="">{{ "SeeOther" | translate }}</a> -->
